Fix Vertical scrollbar doesn't show all content
add 40px of padding to the bottom of the content (Height of panel at top)

--- a/css/panel.css
+++ b/css/panel.css
@@ -75,7 +75,10 @@ form label {
     border: 0;
     width: 100%;
     height: auto;
-    background: #FFF;
+}
+
+.tabs-left .mainTabs {
+    background: #FFFFFF;
     box-shadow: 2px 2px 4px rgba( 0, 0, 0, 0.1);
 }
 
@@ -246,6 +249,11 @@ form label {
 .appComponentList>li {
     background-color: #EBEBEB;
     margin-bottom: 0;
+}
+
+.appComponentList {
+    background: transparent;
+    padding-bottom: 40px;
 }
 
 .appComponentToggle {
